ssql-core/src/main/java/com/kosho/ssql/core/dsl/parser/SsqlParser.java
// Generated from by ANTLR 4.9.1
package com.kosho.ssql.core.dsl.parser;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SsqlParser extends Parser {
    static {
        RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    public static final int
            SPACE = 1, COMMENT = 2, LINE_COMMENT = 3, SELECT = 4, DISTINCT = 5, FROM = 6, WHERE = 7,
            ORDER = 8, GROUP = 9, HAVING = 10, NULLS = 11, FIRST = 12, LAST = 13, ASC = 14, DESC = 15,
            BY = 16, AS = 17, AND = 18, OR = 19, NOT = 20, IS = 21, LIKE = 22, CONTAINS = 23, BETWEEN = 24,
            EXISTS = 25, LIMIT = 26, TRUE = 27, FALSE = 28, EMPTY = 29, NULL = 30, STAR = 31, DIV = 32,
            MOD = 33, PLUS = 34, MINUS = 35, EQ = 36, EQS = 37, NOT_EQ = 38, GT = 39, GTE = 40, LT = 41,
            LTE = 42, IN = 43, DOT = 44, LBKT = 45, RBKT = 46, COMMA = 47, SEMI = 48, AT_SIGN = 49,
            SINGLE_QUOTE = 50, DOUBLE_QUOTE = 51, REVERSE_QUOTE = 52, COLON = 53, DOLLAR = 54,
            SQUOTE_STRING = 55, DQUOTE_STRING = 56, RQUOTE_STRING = 57, INTEGER = 58, DECIMAL = 59,
            ID = 60;
    public static final int
            RULE_ssql = 0, RULE_selectStatement = 1, RULE_selectClause = 2, RULE_selectColumns = 3,
            RULE_selectColumn = 4, RULE_fromClause = 5, RULE_tableRefs = 6, RULE_tableRef = 7,
            RULE_whereClause = 8, RULE_expression = 9, RULE_predicateExpr = 10, RULE_groupByClause = 11,
            RULE_havingClause = 12, RULE_orderByClause = 13, RULE_orderByExpr = 14,
            RULE_sort = 15, RULE_orderNullsExpr = 16, RULE_limitClause = 17, RULE_fieldAtom = 18,
            RULE_valueAtom = 19, RULE_arithExpr = 20, RULE_simpleValueAtom = 21, RULE_listValue = 22,
            RULE_varValue = 23, RULE_fieldValue = 24, RULE_functionExpr = 25, RULE_functionArgs = 26,
            RULE_argAtom = 27, RULE_identifierValue = 28, RULE_constant = 29, RULE_stringLiteral = 30,
            RULE_numberLiteral = 31, RULE_booleanLiteral = 32, RULE_comparisonOperator = 33;

    private static String[] makeRuleNames() {
        return new String[]{
                "ssql", "selectStatement", "selectClause", "selectColumns", "selectColumn",
                "fromClause", "tableRefs", "tableRef", "whereClause", "expression", "predicateExpr",
                "groupByClause", "havingClause", "orderByClause", "orderByExpr", "sort",
                "orderNullsExpr", "limitClause", "fieldAtom", "valueAtom", "arithExpr",
                "simpleValueAtom", "listValue", "varValue", "fieldValue", "functionExpr",
                "functionArgs", "argAtom", "identifierValue", "constant", "stringLiteral",
                "numberLiteral", "booleanLiteral", "comparisonOperator"
        };
    }

    public static final String[] ruleNames = makeRuleNames();

    private static String[] makeLiteralNames() {
        return new String[]{
                null, null, null, null, null, null, null, null, null, null, null, null,
                null, null, null, null, null, null, null, null, null, null, null, null,
                null, null, null, null, null, null, null, "'*'", "'/'", "'%'", "'+'",
                "'-'", "'='", "'=='", "'!='", "'>'", "'>='", "'<'", "'<='", null, "'.'",
                "'('", "')'", "','", "';'", "'@'", "'''", "'\"'", "'`'", "':'", "'$'"
        };
    }

    private static final String[] _LITERAL_NAMES = makeLiteralNames();

    private static String[] makeSymbolicNames() {
        return new String[]{
                null, "SPACE", "COMMENT", "LINE_COMMENT", "SELECT", "DISTINCT", "FROM",
                "WHERE", "ORDER", "GROUP", "HAVING", "NULLS", "FIRST", "LAST", "ASC",
                "DESC", "BY", "AS", "AND", "OR", "NOT", "IS", "LIKE", "CONTAINS", "BETWEEN",
                "EXISTS", "LIMIT", "TRUE", "FALSE", "EMPTY", "NULL", "STAR", "DIV", "MOD",
                "PLUS", "MINUS", "EQ", "EQS", "NOT_EQ", "GT", "GTE", "LT", "LTE", "IN",
                "DOT", "LBKT", "RBKT", "COMMA", "SEMI", "AT_SIGN", "SINGLE_QUOTE", "DOUBLE_QUOTE",
                "REVERSE_QUOTE", "COLON", "DOLLAR", "SQUOTE_STRING", "DQUOTE_STRING",
                "RQUOTE_STRING", "INTEGER", "DECIMAL", "ID"
        };
    }

    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "SsqlParser.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public SsqlParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    public static class SsqlContext extends ParserRuleContext {
        public SelectStatementContext selectStatement() {
            return getRuleContext(SelectStatementContext.class, 0);
        }

        public TerminalNode EOF() {
            return getToken(SsqlParser.EOF, 0);
        }

        public TerminalNode SEMI() {
            return getToken(SsqlParser.SEMI, 0);
        }

        public SsqlContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_ssql;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof SsqlParserVisitor) return ((SsqlParserVisitor<? extends T>) visitor).visitSsql(this);
            else return visitor.visitChildren(this);
        }
    }

    public final SsqlContext ssql() throws RecognitionException {
        SsqlContext _localctx = new SsqlContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_ssql);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(68);
                selectStatement();
                setState(70);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == SEMI) {
                    {
                        setState(69);
                        match(SEMI);
                    }
                }

                setState(72);
                match(EOF);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class SelectStatementContext extends ParserRuleContext {
        public SelectStatementContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_selectStatement;
        }

        public SelectStatementContext() {
        }

        public void copyFrom(SelectStatementContext ctx) {
            super.copyFrom(ctx);
        }
    }

    public static class BracketedSelectStatementContext extends SelectStatementContext {
        public TerminalNode LBKT() {
            return getToken(SsqlParser.LBKT, 0);
        }

        public SelectStatementContext selectStatement() {
            return getRuleContext(SelectStatementContext.class, 0);
        }

        public TerminalNode RBKT() {
            return getToken(SsqlParser.RBKT, 0);
        }

        public BracketedSelectStatementContext(SelectStatementContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof SsqlParserVisitor)
                return ((SsqlParserVisitor<? extends T>) visitor).visitBracketedSelectStatement(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class SimpleSelectStatementContext extends SelectStatementContext {
        public SelectClauseContext selectClause() {
            return getRuleContext(SelectClauseContext.class, 0);
        }

        public FromClauseContext fromClause() {
            return getRuleContext(FromClauseContext.class, 0);
        }

        public WhereClauseContext whereClause() {
            return getRuleContext(WhereClauseContext.class, 0);
        }

        public GroupByClauseContext groupByClause() {
            return getRuleContext(GroupByClauseContext.class, 0);
        }

        public OrderByClauseContext orderByClause() {
            return getRuleContext(OrderByClauseContext.class, 0);
        }

        public LimitClauseContext limitClause() {
            return getRuleContext(LimitClauseContext.class, 0);
        }

        public SimpleSelectStatementContext(SelectStatementContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof SsqlParserVisitor)
                return ((SsqlParserVisitor<? extends T>) visitor).visitSimpleSelectStatement(this);
            else return visitor.visitChildren(this);
        }
    }

    public final SelectStatementContext selectStatement() throws RecognitionException {
        SelectStatementContext _localctx = new SelectStatementContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_selectStatement);
        int _la;
        try {
            setState(92);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case SELECT:
                    _localctx = new SimpleSelectStatementContext(_localctx);
                    enterOuterAlt(_localctx, 1);
                {
                    setState(74);
                    selectClause();
                    setState(75);
                    fromClause();
                    setState(77);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    if (_la == WHERE) {
                        {
                            setState(76);
                            whereClause();
                        }
                    }

                    setState(80);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    if (_la == GROUP) {
                        {
                            setState(79);
                            groupByClause();
                        }
                    }

                    setState(83);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    if (_la == ORDER) {
                        {
                            setState(82);
                            orderByClause();
                        }
                    }

                    setState(86);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    if (_la == LIMIT) {
                        {
                            setState(85);
                            limitClause();
                        }
                    }

                }
                break;
                case LBKT:
                    _localctx = new BracketedSelectStatementContext(_localctx);
                    enterOuterAlt(_localctx, 2);
                {
                    setState(88);
                    match(LBKT);
                    setState(89);
                    selectStatement();
                    setState(90);
                    match(RBKT);
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class SelectClauseContext extends ParserRuleContext {
        public TerminalNode SELECT() {
            return getToken(SsqlParser.SELECT, 0);
        }

        public SelectColumnsContext selectColumns() {
            return getRuleContext(SelectColumnsContext.class, 0);
        }

        public TerminalNode DISTINCT() {
            return getToken(SsqlParser.DISTINCT, 0);
        }

        public SelectClauseContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_selectClause;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof SsqlParserVisitor)
                return ((SsqlParserVisitor<? extends T>) visitor).visitSelectClause(this);
            else return visitor.visitChildren(this);
        }
    }

    public final SelectClauseContext selectClause() throws RecognitionException {
        SelectClauseContext _localctx = new SelectClauseContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_selectClause);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(94);
                match(SELECT);
                setState(96);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == DISTINCT) {
                    {
                        setState(95);
                        match(DISTINCT);
                    }
                }

                setState(98);
                selectColumns();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class SelectColumnsContext extends ParserRuleContext {
        public SelectColumnsContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_selectColumns;
        }

        public SelectColumnsContext() {
        }

        public void copyFrom(SelectColumnsContext ctx) {
            super.copyFrom(ctx);
        }
    }

    public static class SelectAllContext extends SelectColumnsContext {
        public TerminalNode STAR() {
            return getToken(SsqlParser.STAR, 0);
        }

        public SelectAllContext(SelectColumnsContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof SsqlParserVisitor)
                return ((SsqlParserVisitor<? extends T>) visitor).visitSelectAll(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class SelectSpecialColumnsContext extends SelectColumnsContext {
        public List<SelectColumnContext> selectColumn() {
            return getRuleContexts(SelectColumnContext.class);
        }

        public SelectColumnContext selectColumn(int i) {
            return getRuleContext(SelectColumnContext.class, i);
        }

        public List<TerminalNode> COMMA() {
            return getTokens(SsqlParser.COMMA);
        }

        public TerminalNode COMMA(int i) {
            return getToken(SsqlParser.COMMA, i);
        }

        public SelectSpecialColumnsContext(SelectColumnsContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof SsqlParserVisitor)
                return ((SsqlParserVisitor<? extends T>) visitor).visitSelectSpecialColumns(this);
            else return visitor.visitChildren(this);
        }
    }

    public final SelectColumnsContext selectColumns() throws RecognitionException {
        SelectColumnsContext _localctx = new SelectColumnsContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_selectColumns);
        int _la;
        try {
            setState(109);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case STAR:
                    _localctx = new SelectAllContext(_localctx);
                    enterOuterAlt(_localctx, 1);
                {
                    setState(100);
                    match(STAR);
                }
                break;
                case TRUE:
                case FALSE:
                case NULL:
                case MINUS:
                case LBKT:
                case DOLLAR:
                case SQUOTE_STRING:
                case DQUOTE_STRING:
                case INTEGER:
                case DECIMAL:
                case ID:
                    _localctx = new SelectSpecialColumnsContext(_localctx);
                    enterOuterAlt(_localctx, 2);
                {
                    setState(101);
                    selectColumn();
                    setState(106);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    while (_la == COMMA) {
                        {
                            {
                                setState(102);
                                match(COMMA);
                                setState(103);
                                selectColumn();
                            }
                        }
                        setState(108);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    }
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class SelectColumnContext extends ParserRuleContext {
        public ValueAtomContext column;
        public IdentifierValueContext alias;

        public ValueAtomContext valueAtom() {
            return getRuleContext(ValueAtomContext.class, 0);
        }

        public IdentifierValueContext identifierValue() {
            return getRuleContext(IdentifierValueContext.class, 0);
        }

        public TerminalNode AS() {
            return getToken(SsqlParser.AS, 0);
        }

        public SelectColumnContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_selectColumn;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof SsqlParserVisitor)
                return ((SsqlParserVisitor<? extends T>) visitor).visitSelectColumn(this);
            else return visitor.visitChildren(this);
        }
    }

    public final SelectColumnContext selectColumn() throws RecognitionException {
        SelectColumnContext _localctx = new SelectColumnContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_selectColumn);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(111);
                ((SelectColumnContext) _localctx).column = valueAtom();
                setState(116);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << AS) | (1L << DQUOTE_STRING) | (1L << ID))) != 0)) {
                    {
                        setState(113);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        if (_la == AS) {
                            {
                                setState(112);
                                match(AS);
                            }
                        }

                        setState(115);
                        ((SelectColumnContext) _localctx).alias = identifierValue();
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class FromClauseContext extends ParserRuleContext {
        public TerminalNode FROM() {
            return getToken(SsqlParser.FROM, 0);
        }

        public TableRefsContext tableRefs() {
            return getRuleContext(TableRefsContext.class, 0);
        }

        public FromClauseContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_fromClause;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof SsqlParserVisitor)
                return ((SsqlParserVisitor<? extends T>) visitor).visitFromClause(this);
            else return visitor.visitChildren(this);
        }
    }

    public final FromClauseContext fromClause() throws RecognitionException {
        FromClauseContext _localctx = new FromClauseContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_fromClause);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(118);
                match(FROM);
                setState(119);
                tableRefs();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class TableRefsContext extends ParserRuleContext {
        public List<TableRefContext> tableRef() {
            return getRuleContexts(TableRefContext.class);
        }

        public TableRefContext tableRef(int i) {
            return getRuleContext(TableRefContext.class, i);
        }

        public TerminalNode COMMA() {
            return getToken(SsqlParser.COMMA, 0);
        }

        public TableRefsContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_tableRefs;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof SsqlParserVisitor)
                return ((SsqlParserVisitor<? extends T>) visitor).visitTableRefs(this);
            else return visitor.visitChildren(this);
        }
    }

    public final TableRefsContext tableRefs() throws RecognitionException {
        TableRefsContext _localctx = new TableRefsContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_tableRefs);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(121);
                tableRef();
                setState(124);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == COMMA) {
                    {
                        setState(122);
                        match(COMMA);
                        setState(123);
                        tableRef();
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class TableRefContext extends ParserRuleContext {
        public IdentifierValueContext table;
        public IdentifierValueContext alias;

        public List<IdentifierValueContext> identifierValue() {
            return getRuleContexts(IdentifierValueContext.class);
        }

        public IdentifierValueContext identifierValue(int i) {
            return getRuleContext(IdentifierValueContext.class, i);
        }

        public TerminalNode AS() {
            return getToken(SsqlParser.AS, 0);
        }

        public TableRefContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_tableRef;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof SsqlParserVisitor)
                return ((SsqlParserVisitor<? extends T>) visitor).visitTableRef(this);
            else return visitor.visitChildren(this);
        }
    }

    public final TableRefContext tableRef() throws RecognitionException {
        TableRefContext _localctx = new TableRefContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_tableRef);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(126);
                ((TableRefContext) _localctx).table = identifierValue();
                setState(131);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << AS) | (1L << DQUOTE_STRING) | (1L << ID))) != 0)) {
                    {
                        setState(128);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        if (_la == AS) {
                            {
                                setState(127);
                                match(AS);
                            }
                        }

                        setState(130);
                        ((TableRefContext) _localctx).alias = identifierValue();
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class WhereClauseContext extends ParserRuleContext {
        public TerminalNode WHERE() {
            return getToken(SsqlParser.WHERE, 0);
        }

        public ExpressionContext expression() {
            return getRuleContext(ExpressionContext.class, 0);
        }

        public WhereClauseContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_whereClause;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof SsqlParserVisitor)
                return ((SsqlParserVisitor<? extends T>) visitor).visitWhereClause(this);
            else return visitor.visitChildren(this);
        }
    }

    public final WhereClauseContext whereClause() throws RecognitionException {
        WhereClauseContext _localctx = new WhereClauseContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_whereClause);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(133);
                match(WHERE);
                setState(134);
                expression(0);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ExpressionContext extends ParserRuleContext {
        public ExpressionContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_expression;
        }

        public ExpressionContext() {
        }

        public void copyFrom(ExpressionContext ctx) {
            super.copyFrom(ctx);
        }
    }

    public static class PredicatedExprContext extends ExpressionContext {
        public PredicateExprContext predicateExpr() {
            return getRuleContext(PredicateExprContext.class, 0);
        }

        public PredicatedExprContext(ExpressionContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof SsqlParserVisitor)
                return ((SsqlParserVisitor<? extends T>) visitor).visitPredicatedExpr(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class LogicExprContext extends ExpressionContext {
        public ExpressionContext left;
        public Token operator;
        public ExpressionContext right;

        public List<ExpressionContext> expression() {
            return getRuleContexts(ExpressionContext.class);
        }

        public ExpressionContext expression(int i) {
            return getRuleContext(ExpressionContext.class, i);
        }

        public TerminalNode AND() {
            return getToken(SsqlParser.AND, 0);
        }

        public TerminalNode OR() {
            return getToken(SsqlParser.OR, 0);
        }

        public LogicExprContext(ExpressionContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof SsqlParserVisitor)
                return ((SsqlParserVisitor<? extends T>) visitor).visitLogicExpr(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class BracketedExprContext extends ExpressionContext {
        public TerminalNode LBKT() {
            return getToken(SsqlParser.LBKT, 0);
        }

        public ExpressionContext expression() {
            return getRuleContext(ExpressionContext.class, 0);
        }

        public TerminalNode RBKT() {
            return getToken(SsqlParser.RBKT, 0);
        }

        public BracketedExprContext(ExpressionContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof SsqlParserVisitor)
                return ((SsqlParserVisitor<? extends T>) visitor).visitBracketedExpr(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ExpressionContext expression() throws RecognitionException {
        return expression(0);
    }

    private ExpressionContext expression(int _p) throws RecognitionException {
        ParserRuleContext _parentctx = _ctx;
        int _parentState = getState();
        ExpressionContext _localctx = new ExpressionContext(_ctx, _parentState);
        ExpressionContext _prevctx = _localctx;
        int _startState = 18;
        enterRecursionRule(_localctx, 18, RULE_expression, _p);
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(142);
                _errHandler.sync(this);
                switch (getInterpreter().adaptivePredict(_input, 14, _ctx)) {
                    case 1: {
                        _localctx = new BracketedExprContext(_localctx);
                        _ctx = _localctx;
                        _prevctx = _localctx;

                        setState(137);
                        match(LBKT);
                        setState(138);
                        expression(0);
                        setState(139);
                        match(RBKT);
                    }
                    break;
                    case 2: {
                        _localctx = new PredicatedExprContext(_localctx);
                        _ctx = _localctx;
                        _prevctx = _localctx;
                        setState(141);
                        predicateExpr();
                    }
                    break;
                }
                _ctx.stop = _input.LT(-1);
                setState(152);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 16, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        if (_parseListeners != null) triggerExitRuleEvent();
                        _prevctx = _localctx;
                        {
                            setState(150);
                            _errHandler.sync(this);
                            switch (getInterpreter().adaptivePredict(_input, 15, _ctx)) {
                                case 1: {
                                    _localctx = new LogicExprContext(new ExpressionContext(_parentctx, _parentState));
                                    ((LogicExprContext) _localctx).left = _prevctx;
                                    pushNewRecursionContext(_localctx, _startState, RULE_expression);
                                    setState(144);
                                    if (!(precpred(_ctx, 4)))
                                        throw new FailedPredicateException(this, "precpred(_ctx, 4)");
                                    setState(145);
                                    ((LogicExprContext) _localctx).operator = match(AND);
                                    setState(146);
                                    ((LogicExprContext) _localctx).right = expression(5);
                                }
                                break;
                                case 2: {
                                    _localctx = new LogicExprContext(new ExpressionContext(_parentctx, _parentState));
                                    ((LogicExprContext) _localctx).left = _prevctx;
                                    pushNewRecursionContext(_localctx, _startState, RULE_expression);
                                    setState(147);
                                    if (!(precpred(_ctx, 3)))
                                        throw new FailedPredicateException(this, "precpred(_ctx, 3)");
                                    setState(148);
                                    ((LogicExprContext) _localctx).operator = match(OR);
                                    setState(149);
                                    ((LogicExprContext) _localctx).right = expression(4);
                                }
                                break;
                            }
                        }
                    }
                    setState(154);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 16, _ctx);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            unrollRecursionContexts(_parentctx);
        }
        return _localctx;
    }

    public static class PredicateExprContext extends ParserRuleContext {
        public PredicateExprContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_predicateExpr;
        }

        public PredicateExprContext() {
        }

        public void copyFrom(PredicateExprContext ctx) {
            super.copyFrom(ctx);
        }
    }

    public static class BinaryComparisonPredicateContext extends PredicateExprContext {
        public FieldAtomContext fieldAtom() {
            return getRuleContext(FieldAtomContext.class, 0);
        }

        public ComparisonOperatorContext comparisonOperator() {
            return getRuleContext(ComparisonOperatorContext.class, 0);
        }

        public ValueAtomContext valueAtom() {
            return getRuleContext(ValueAtomContext.class, 0);
        }
